--- a/roles/verify-test-apb/tasks/main.yaml
+++ b/roles/verify-test-apb/tasks/main.yaml
@@ -7,3 +7,20 @@
   retries: 10
   delay: 10
   until: webpage.status == 200
+
+- name: Save failure for the web page
+  asb_save_test_result:
+    fail: true
+    msg: "Could not reach route and retrieve a 200 status code. Received status - {{ webpage.status }}"
+  when: webpage.status != 200
+
+- fail:
+    msg: "Could not reach route and retrieve a 200 status code. Received status - {{ webpage.status }}"
+  when: webpage.status != 200
+
+- name: Save test pass
+  asb_save_test_result:
+    fail: false
+    msg: "All tests pass"
+  when: webpage.status == 200
+
